@@ -19,11 +19,15 @@
  */
 package org.thymeleaf.standard.processor.text;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.thymeleaf.Arguments;
+import org.thymeleaf.TemplateEngine;
 import org.thymeleaf.dom.AbstractTextNode;
 import org.thymeleaf.exceptions.TemplateProcessingException;
 import org.thymeleaf.processor.ProcessorResult;
 import org.thymeleaf.processor.TextNodeProcessorMatcher;
+import org.thymeleaf.processor.document.ProcessAllNodesDocumentProcessor;
 import org.thymeleaf.processor.text.AbstractTextNodeProcessor;
 import org.thymeleaf.standard.StandardDialect;
 import org.thymeleaf.standard.inliner.IStandardTextInliner;
@@ -39,6 +43,9 @@ import org.thymeleaf.standard.inliner.IStandardTextInliner;
  */
 public final class StandardTextInliningTextProcessor 
         extends AbstractTextNodeProcessor {
+
+
+    private final Logger logger = LoggerFactory.getLogger(this.getClass());
 
     
     public static final int ATTR_PRECEDENCE = 100;
@@ -68,7 +75,15 @@ public final class StandardTextInliningTextProcessor
         
         final Object inliner = arguments.getLocalVariable(StandardDialect.INLINER_LOCAL_VARIABLE);
         if (inliner == null) {
-            throw new TemplateProcessingException("Cannot execute text inlining processor: No inliner has been set as a local variable");
+            if (this.logger.isTraceEnabled()) {
+                this.logger.trace("[THYMELEAF][{}][{}] Will not process Text node as inline: no inliner has been set. " +
+                        "Please note that setting the 'processOnlyElementNodes' flag to false at a high level in the DOM " +
+                        "tree (like for example using " + ProcessAllNodesDocumentProcessor.class.getName() + ") can reduce " +
+                		"processing performance in templates with a big amount of Text nodes. Consider setting this flag " +
+                        "back to true at some point in your DOM tree to reduce this effect.",
+                        new Object[] {TemplateEngine.threadIndex(), arguments.getTemplateName()});
+            }
+            return ProcessorResult.OK;
         }
         if (!(inliner instanceof IStandardTextInliner)) {
             throw new TemplateProcessingException("Cannot execute text inlining processor: Inliner set does not implement " + IStandardTextInliner.class.getName() + 
